# fortunel-observer

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.cjs  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci-python.yml  ci-ts.yml  deploy.yml
apps/api/: .dev.vars.example  README.md  eslint.config.js  package.json  tsconfig.json  wrangler.toml
apps/bot/: Dockerfile  README.md  pyproject.toml
apps/bot/src/bot/: __init__.py
apps/bot/tests/: test_smoke.py
apps/mcp-server/: README.md  package.json  tsconfig.json
apps/web/: README.md  package.json  tsconfig.json
content/templates/: blog-post.md  trade-thesis.md  weekly-recap.md
docs/: ai-content-guide.md  api-design.md  code-standards.md  deployment-guide.md  llms-full.txt  llms.txt  project-changelog.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
docs/incidents/: secret-rotation.md
docs/journals/: 2026-05-26-phase-a1-workspace-bootstrap.md  2026-05-26-phase-a2-db-foundation.md  2026-05-26-phase-a3-shared-types.md  2026-05-26-phase-a4-api-foundation.md  2026-05-26-phase-a5-auth-surface.md  2026-05-26-phase-a6-crud-resources.md  2026-05-26-phase-a7-ci-deploy.md  2026-05-26-phase-a8-knowledge-layer.md
infra/dev/: README.md  docker-compose.yml
infra/migration/: neon-to-vps.md
infra/prod-vps/: .env.example  Caddyfile  README.md  docker-compose.yml
plans/20260526-1530-phase-a-backend-core/: phase-01-workspace-bootstrap.md  phase-02-db-foundation.md  phase-03-shared-types.md  phase-04-api-foundation.md  (+5 more)
scripts/: generate-llms-txt.ts
(+54 files in other folders)
