[project]
name = "fortunel-bot"
version = "0.1.0"
description = "Fortunel trading bot — data ingestion, signal generation, journaling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
dependencies = [
  # Phase D will pin: ccxt, pandas, numpy, vectorbt, TA-Lib (system lib), pydantic, httpx, python-telegram-bot, structlog
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src/bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
